--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.10+10
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -26,7 +26,7 @@ dependencies:
   scoped_model: ^1.0.1
   http: ^0.12.0+1
   font_awesome_flutter: ^8.2.0
-  shared_preferences: ^0.4.3
+  shared_preferences: ^0.5.6+1
   rxdart: ^0.20.0
   flutter_rating: ^0.0.2
   intl: ^0.15.7
